5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1764_672.log
== TEST (2019-05-21 07:38:19) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *

n = int(input("digite a quantidade de posicoes do vetor: ")

v1 = ones(n, dtype=int)
print(v1)		  
		  
-- ERROR:
File "XXXX", line 6
    v1 = ones(n, dtype=int)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 07:40:07) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *

n = int(input("digite a quantidade de posicoes do vetor: ")

v1 = array(ones(n, dtype=int))
print(v1)		  
		  
-- ERROR:
File "XXXX", line 6
    v1 = array(ones(n, dtype=int))
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 07:40:14) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *

n = int(input("digite a quantidade de posicoes do vetor: ")

v = array(ones(n, dtype=int))
print(v1)		  
		  
-- ERROR:
File "XXXX", line 6
    v = array(ones(n, dtype=int))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 07:44:51) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v1 = array([11, 12, 13 ])
print(v1)		  
		  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 07:45:46) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
v1 = ones(4, dtype=int)
print(v1)		  
		  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 07:46:45) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
z = int(input("Digite o numero de termos do vetor: ")
v1 = ones(4, dtype=int)
print(v1)		  
		  
-- ERROR:
File "XXXX", line 4
    v1 = ones(4, dtype=int)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 07:47:17) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
#z = int(input("Digite o numero de termos do vetor: ")
v1 = ones(4, dtype=int)
print(v1)		  
		  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 07:49:02) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
z = array(eval(input("Digite o numero de termos do vetor: ")))
v1 = ones(4, dtype=int)
print(v1)		  
		  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 07:49:18) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
z = array(eval(input("Digite o numero de termos do vetor: ")))
v1 = ones(z, dtype=int)
print(v1)		  
		  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 07:49:37) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
z = array(eval(input("Digite o numero de termos do vetor: ")))
v1 = ones(z, dtype=int)
print(v1)		  
		  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 07:49:44) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
z = array(eval(input("Digite o numero de termos do vetor: ")))
v1 = ones(z, dtype=int)
print(v1)		  
		  
-- EXECUTION TIME:
0.575836
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 16:08:09) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
z = array(eval(input("Digite o numero de termos do vetor: ")))
v1 = ones(z, dtype=int)
print(v1)	  
		  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
